--- a/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
+      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-02-18 01:23:45.475094\n"
+      "2018-06-01 11:50:19.202242\n"
      ]
     }
    ],
@@ -240,7 +240,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:5: RuntimeWarning: invalid value encountered in less\n"
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -354,11 +355,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column: flag_gpc1_g not in masterlist.\n",
+      "Column: flag_gpc1_r not in masterlist.\n",
+      "Column: flag_gpc1_i not in masterlist.\n",
+      "Column: flag_gpc1_z not in masterlist.\n",
+      "Column: flag_gpc1_y not in masterlist.\n",
+      "Column: flag_irac_i1 not in masterlist.\n",
+      "Column: flag_irac_i2 not in masterlist.\n",
+      "Column: flag_irac_i3 not in masterlist.\n",
+      "Column: flag_irac_i4 not in masterlist.\n",
+      "Column: flag_wfc_u not in masterlist.\n",
+      "Column: flag_megacam_u not in masterlist.\n",
+      "Column: flag_wfc_g not in masterlist.\n",
+      "Column: flag_megacam_g not in masterlist.\n",
+      "Column: flag_wfc_r not in masterlist.\n",
+      "Column: flag_megacam_r not in masterlist.\n",
+      "Column: flag_wfc_i not in masterlist.\n",
+      "Column: flag_wfc_z not in masterlist.\n",
+      "Column: flag_megacam_z not in masterlist.\n"
+     ]
+    }
+   ],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -384,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -432,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -482,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -512,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -527,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
