--- a/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
@@ -21,9 +21,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
+      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-04-16 17:13:31.770164\n"
+      "2018-06-02 12:19:29.451385\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
     "MAKE_CIGALE_CATALOGUE = True\n",
     "MAKE_FINAL_CATALOGUE = True\n",
     "\n",
-    "SUFFIX = '20171206'"
+    "SUFFIX = '20180601'"
    ]
   },
   {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -375,14 +375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'stellarity_origin'}\n"
+      "set()\n",
+      "set()\n"
      ]
     }
    ],
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -552,11 +553,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
@@ -575,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
