--- a/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-05-29 17:38:08.458721\n"
+      "2018-06-02 14:07:07.513395\n"
      ]
     }
    ],
@@ -350,32 +350,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column: flag_gpc1_g_ap not in masterlist.\n",
-      "Column: flag_gpc1_r_ap not in masterlist.\n",
-      "Column: flag_gpc1_i_ap not in masterlist.\n",
-      "Column: flag_gpc1_z_ap not in masterlist.\n",
-      "Column: flag_gpc1_y_ap not in masterlist.\n",
-      "Column: flag_ap_decam_g not in masterlist.\n",
-      "Column: flag_ap_suprime_g not in masterlist.\n",
-      "Column: flag_ap_gpc1_g not in masterlist.\n",
-      "Column: flag_ap_decam_r not in masterlist.\n",
-      "Column: flag_ap_suprime_r not in masterlist.\n",
-      "Column: flag_ap_gpc1_r not in masterlist.\n",
-      "Column: flag_ap_suprime_i not in masterlist.\n",
-      "Column: flag_ap_gpc1_i not in masterlist.\n",
-      "Column: flag_ap_decam_z not in masterlist.\n",
-      "Column: flag_ap_suprime_z not in masterlist.\n",
-      "Column: flag_ap_gpc1_z not in masterlist.\n",
-      "Column: flag_ap_suprime_y not in masterlist.\n",
-      "Column: flag_ap_gpc1_y not in masterlist.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -409,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_ap_gpc1_g', 'flag_ap_decam_r', 'flag_ap_suprime_z', 'flag_ap_suprime_i', 'flag_gpc1_z_ap', 'flag_ap_gpc1_z', 'flag_ap_suprime_g', 'flag_gpc1_y_ap', 'flag_gpc1_r_ap', 'flag_ap_gpc1_r', 'flag_ap_gpc1_y', 'flag_ap_decam_z', 'flag_gpc1_i_ap', 'flag_ap_suprime_y', 'flag_ap_gpc1_i', 'flag_ap_suprime_r', 'flag_gpc1_g_ap', 'flag_ap_decam_g'}\n"
+      "set()\n"
      ]
     }
    ],
@@ -587,7 +562,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_ap_gpc1_g', 'flag_ap_decam_r', 'flag_ap_suprime_z', 'flag_ap_suprime_i', 'flag_gpc1_z_ap', 'flag_ap_gpc1_z', 'flag_ap_suprime_g', 'flag_gpc1_y_ap', 'flag_gpc1_r_ap', 'flag_ap_gpc1_r', 'flag_ap_gpc1_y', 'flag_ap_decam_z', 'flag_gpc1_i_ap', 'flag_ap_suprime_y', 'flag_ap_gpc1_i', 'flag_ap_suprime_r', 'flag_gpc1_g_ap', 'flag_ap_decam_g'}\n"
+      "set()\n"
      ]
     }
    ],
