--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -331,11 +331,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column: flag_gpc1_g not in masterlist.\n",
+      "Column: flag_gpc1_r not in masterlist.\n",
+      "Column: flag_gpc1_i not in masterlist.\n",
+      "Column: flag_gpc1_z not in masterlist.\n",
+      "Column: flag_gpc1_y not in masterlist.\n",
+      "Column: flag_irac_i1 not in masterlist.\n",
+      "Column: flag_irac_i2 not in masterlist.\n",
+      "Column: flag_irac_i3 not in masterlist.\n",
+      "Column: flag_irac_i4 not in masterlist.\n",
+      "Column: flag_wfc_u not in masterlist.\n",
+      "Column: flag_megacam_u not in masterlist.\n",
+      "Column: flag_wfc_g not in masterlist.\n",
+      "Column: flag_megacam_g not in masterlist.\n",
+      "Column: flag_wfc_r not in masterlist.\n",
+      "Column: flag_megacam_r not in masterlist.\n",
+      "Column: flag_wfc_i not in masterlist.\n",
+      "Column: flag_wfc_z not in masterlist.\n",
+      "Column: flag_megacam_z not in masterlist.\n"
+     ]
+    }
+   ],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -361,13 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "set()\n",
       "set()\n"
      ]
     }
@@ -416,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -466,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -496,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -511,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
