--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -357,7 +357,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -372,7 +373,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -387,7 +389,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -402,7 +405,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -417,7 +421,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -432,7 +437,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -447,7 +453,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -462,7 +469,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -477,7 +485,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -492,7 +501,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -507,7 +517,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -522,7 +533,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -537,7 +549,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -552,7 +565,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -567,7 +581,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -582,7 +597,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -597,7 +613,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -612,7 +629,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -627,7 +645,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -642,7 +661,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -657,7 +677,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -672,7 +693,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -687,7 +709,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -702,7 +725,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -717,7 +741,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -732,7 +757,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -747,7 +773,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -762,7 +789,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -777,7 +805,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -792,7 +821,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -807,7 +837,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -822,7 +853,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -837,7 +869,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -852,7 +885,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -867,7 +901,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -882,7 +917,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -897,7 +933,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -912,7 +949,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -927,7 +965,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -942,7 +981,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -957,7 +997,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -972,7 +1013,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -987,7 +1029,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1002,7 +1045,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1017,7 +1061,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1032,7 +1077,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1047,7 +1093,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1062,7 +1109,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1077,7 +1125,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1092,7 +1141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1107,7 +1157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1122,7 +1173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1137,7 +1189,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1152,7 +1205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1167,7 +1221,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1182,7 +1237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1197,7 +1253,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1212,7 +1269,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1227,7 +1285,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1242,7 +1301,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1257,7 +1317,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1272,7 +1333,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1287,7 +1349,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1302,7 +1365,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1317,7 +1381,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1332,7 +1397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1347,7 +1413,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1362,7 +1429,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1377,7 +1445,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1392,7 +1461,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1407,7 +1477,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1422,7 +1493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1437,7 +1509,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1452,7 +1525,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1467,7 +1541,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1482,7 +1557,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1497,7 +1573,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1512,7 +1589,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1527,7 +1605,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1542,7 +1621,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1557,7 +1637,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1572,7 +1653,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1587,7 +1669,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1602,7 +1685,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1617,7 +1701,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1632,7 +1717,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1647,7 +1733,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     },
     {
@@ -1662,7 +1749,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "set()\n",
+      "{'ferr_hawki_y'}\n"
      ]
     }
    ],
