COSMOS notebook typos fixed

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDFS-SWIRE - Merging HELP data products\n",
+    "# COSMOS - Merging HELP data products\n",
     "\n",
-    "This notebook merges the various HELP data products on CDFS-SWIRE.\n",
+    "This notebook merges the various HELP data products on COSMOS.\n",
     "\n",
     "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
    ]
@@ -430,7 +430,7 @@
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_COSMOS/data/photoz/final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_COSMOS/data/zphot/final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "    \n",
     "    ##################REVERT ids###################\n",
