LS id length to 27 in photoz crossid

--- a/dmu24/dmu24_Lockman-SWIRE/2_Update_HELP_IDs.ipynb
+++ b/dmu24/dmu24_Lockman-SWIRE/2_Update_HELP_IDs.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -88,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "photoz = Table.read(\"./data/master_catalogue_Lockman-SWIRE_20170710_photoz_20170802_r_and_irac1_optimised.fits\")\n",
@@ -117,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_table = join(master_catalogue, photoz, join_type='left')\n",
@@ -252,7 +258,7 @@
     "\n",
     "    # We add the new help_id columns to the catalogue.\n",
     "    catalogue.add_column(\n",
-    "        Column(data=np.full(len(catalogue), '', dtype='<U33'),\n",
+    "        Column(data=np.full(len(catalogue), '', dtype='<U27'),\n",
     "               name=\"help_id\"))\n",
     "    catalogue['help_id'][idx_cat] = master_catalogue['help_id'][idx_master]\n",
     "\n",
@@ -275,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "photoz_new = helpid_merge(photoz, \"photoz_ra\", \"photoz_dec\", master_catalogue, radius=0.8*u.arcsec)"
@@ -591,7 +599,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "photoz_new[cols].write(\"./data/master_catalogue_Lockman-SWIRE_20170710_photoz_20170802_r_and_irac1_optimised_UPDATED_IDs_{}.fits\".format( NEW_SUFFIX)\n",
