GAMA-15 final merge

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -61,14 +61,14 @@
     "# Field                suffix\n",
     "['AKARI-NEP',          '20180215' ],\n",
     "['AKARI-SEP',          '20180221' ],\n",
-    "['Bootes',             '20180520' ], #There are two versions Brown and HELP - we use Brown\n",
+    "['Bootes',             '20180520' ], \n",
     "['CDFS-SWIRE',         '20180221' ],\n",
     "['COSMOS',             '20180516' ],\n",
     "['EGS',                '20180501' ],\n",
     "['ELAIS-N1',           '20171016' ],\n",
     "['ELAIS-N2',           '20180218' ],\n",
     "['ELAIS-S1',           '20180416' ],\n",
-    "['GAMA-09',            '20171206' ],\n",
+    "['GAMA-09',            '20180601' ],\n",
     "['GAMA-12',            '20180218' ],\n",
     "['GAMA-15',            '20180213' ],\n",
     "['HDF-N',              '20180427' ],\n",
