--- a/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
@@ -425,7 +425,7 @@
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-15/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-15/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -547,7 +547,9 @@
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    print( set(columns) == set(merged_table.colnames))\n",
+    "    print( set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns) )"
    ]
   },
   {
