--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -220,7 +220,29 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "depths_to_vo = open('depths_to_vo.sh', 'w+')\n",
+    "for field in dr1:\n",
+    "    final_depth_product = './dmu1_ml_{}/data/depths_{}_{}.fits'.format(field[0], field[0].lower(), field[1])\n",
+    "    \n",
+    "\n",
+    "    if os.path.exists(final_depth_product):\n",
+    "        print(final_depth_product)\n",
+    "    \n",
+    "        #Test with Cigale input files\n",
+    "        depths_to_vo.write(stilts_command.format(in_file=final_depth_product, \n",
+    "                                               GAVO_FOLDER=GAVO_FOLDER, \n",
+    "                                               out_file='depths/main/{}_{}.csv \\n'.format(field[0], \n",
+    "                                                                                                field[1])))\n",
+    "\n",
+    "        \n",
+    "    else:\n",
+    "        depths_to_vo.write('# No depths for {} \\n'.format(field[0]))\n",
+    "        \n",
+    "    #final_data.write('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
+    "    \n",
+    "depths_to_vo.close()"
+   ]
   }
  ],
  "metadata": {
