SSDF folding photoz in

--- a/dmu28/dmu28_SSDF/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SSDF/CIGALE_catalogue_preparation.ipynb
@@ -40,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -230,7 +228,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
