--- a/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
@@ -195,13 +195,13 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "#photoz.meta = None\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_SSDF/data/master_catalogue_ssdf_20180221_photoz_20180612_r_optimised.fits\")\n",
+    "photoz.meta = None\n",
     "\n",
-    "#photoz = photoz['help_id', 'z1_median']\n",
-    "#photoz['z1_median'].name = 'redshift'\n",
+    "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['z1_median'].name = 'redshift'\n",
     "\n",
-    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -303,21 +303,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#merged_table = join(merged_table, photoz, join_type='left')\n",
-    "\n",
-    "# Fill values\n",
-    "#merged_table['redshift'].fill_value = np.nan\n",
-    "#merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": true
@@ -325,6 +310,21 @@
    "outputs": [],
    "source": [
     "merged_table = ml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = join(merged_table, photoz, join_type='left')\n",
+    "\n",
+    "# Fill values\n",
+    "merged_table['redshift'].fill_value = np.nan\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -384,7 +384,7 @@
     "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', #'redshift', \n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
     "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
