--- a/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
+++ b/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
@@ -209,7 +209,7 @@
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "    col_ap, col_tot = \"m_ap_{}\".format(basecol), \"m_{}\".format(basecol)\n",
-    "    flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "    flagcol_ap, flagcol_tot = \"flag_ap_{}\".format(basecol), \"flag_{}\".format(basecol)\n",
     "    \n",
     "    mask_ap  = np.where(master_catalogue[col_ap] >= wircs_mag)[0]\n",
     "    mask_tot  = np.where(master_catalogue[col_tot] >= wircs_mag)[0]\n",
