Add photo z on EGS and SSDF

--- a/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-05-31 14:37:54.885080\n"
+      "2018-06-12 13:12:36.844350\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -359,15 +359,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column: flag_wircs_k_ap not in masterlist.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -403,7 +395,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_wircs_k_ap'}\n"
+      "set()\n"
      ]
     }
    ],
